# oop_petrov_3

./: CMakeLists.txt  dialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  petrov_dialog.cpp  petrov_dialog.h  petrov_dialog.ui  petrov_header.h  petrov_item.cpp  petrov_item.h  petrov_shop.cpp  petrov_shop.h  petrov_used_item.cpp  petrov_used_item.h  petrov_widget.cpp  petrov_widget.h
